@@ -1,10 +1,10 @@
 package nightkosh.advanced_fishing.core;
 
-import net.minecraft.block.material.Material;
+import net.minecraft.world.level.material.Material;
 import nightkosh.advanced_fishing.api.material.IMaterialManager;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 /**
@@ -20,11 +20,12 @@ public class MaterialManager implements IMaterialManager {
     public static final Set<Material> MATERIAL_SET = new HashSet<>();
 
     static {
-        MATERIAL_SET.addAll(Arrays.asList(Material.WATER, Material.LAVA));
+        MATERIAL_SET.addAll(List.of(Material.WATER, Material.LAVA));
     }
 
     @Override
     public void addMaterial(Material material) {
         MATERIAL_SET.add(material);
     }
+
 }
